--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -4,95 +4,36 @@
 .generic_room{
     height: 100%;
     width: 100%;
-
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    justify-items: center;
+    justify-items: start;
     align-items: center;
     gap: 10px;
-
     overflow: hidden;
-    max-height: 100vh; 
-    max-width: 100vw;  
-    box-sizing: border-box; 
+    max-height: 100vh;
+    max-width: 100vw;
+    box-sizing: border-box;
     padding: 1rem;
 }
+
+
 
 /*
 ------------------------------------------ Room Title
 */
 
-.generic_room_title{
+.title_info{
     grid-row: 1/2;
-    grid-column: 2 / 8;
-   
+    grid-column: 2 / 13; 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
     width: 100%;
-
-
+    font-weight: 100;
     animation: room_selection 1000ms;
 }
-    .generic_room_title h1{
-        font-size: 1.75rem;
-        margin: 0%;
-        color: rgb(0, 0, 0);
-        font-weight: 100;
-    }
-
-    .generic_room_title .clock{
-        margin: 0%;
-        color: rgb(0, 0, 0);
-        font-size: 1.5rem;
-        font-weight: lighter;
-        position: relative;
-        left: 10px;
-    
-    }
-/*
-------------------------------------------- Landing page for  selection
-*/
-
-.generic_room_dashboard{
-    grid-column: 2/8;
-    grid-row: 2/8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1rem;
-    height: 100%;
-    width: 100%;
-
-    animation: room_selection 1000ms;
-}
-    .generic_room_card{
-        height: 14rem;
-        width:  16rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        border-radius: 10px;
-        background-color:  rgb(177, 177, 177);
-        box-shadow: -5px -5px 8px #0f0f0f7a, 
-                5px 5px 6px #ffffff7a;
-    }
-        .generic_room_card img{
-            height: 5rem;
-        }
-
-        .generic_room_card p{
-            color:aliceblue;
-            font-size: x-large;
-        }
-
-
-
 
 
 /*
@@ -101,23 +42,22 @@
 
 
 .generic_media_container{
-    background-color: transparent;
-    grid-column: 1/9;
+    grid-column: 2/13;
     grid-row: 2/9;
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(9,1fr);
     grid-template-rows: repeat(7,1fr);
-
     justify-items: center;
-   
     align-items: center;
+    
+    border-radius: 15px;
 }
 
 
 .room_sources_container{
-    grid-column: 2/9;
+    grid-column: 1/10;
     grid-row: 2/7;
 
     background-color: transparent;
@@ -129,33 +69,44 @@
     flex-wrap: wrap;
 
     gap: 1rem;
-}
+
+    }
 
 .source_card{
 
-    height: 14rem;
-    width: 12rem;
-    border-radius: 5px;
+    height: 13rem;
+    width: 13rem;
+    border-radius: 10px;
 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 
-    background-color: rgba(146, 142, 142);
+    background-color: rgba(50, 50, 50, 0.85);
+    text-decoration: none;
+    
+    backdrop-filter: blur(25px);
 
-    border-radius: 10px;
-    background-color:  transparent;
+    border-radius: 25px;
+
     box-shadow: 
         -6px -1px 15px #0f0f0f7a, 
         5px 5px 10px #ffffff7a;
     z-index: 1;
+
     position: relative;
     animation: fade 1000ms;
 
-    backdrop-filter: blur(25px);
- 
+    overflow: hidden;
 }
+    #active_source{
+        box-shadow: 
+        -5px -5px 25px rgb(255, 255, 255), 
+        5px 5px 25px rgb(255, 255, 255);
+
+        background-color: rgba(56, 87, 133, 0.673);
+    }
     
 
 .source_card .img_container {
@@ -164,11 +115,9 @@
     
     aspect-ratio: 1;
     border-radius: 20px;
-    background: rgb(90, 89, 89);
+    background-color: transparent;   
     margin-bottom: 0.4em;
-    box-shadow: -5px -5px 8px #0f0f0f7a, 
-                5px 5px 6px #ffffff7a;
-
+   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,6 +125,8 @@
     .source_card img{
         height: 100%;
     }
+
+    
 
 /*
 --------------------------------------------------------- controller layout
@@ -249,17 +200,15 @@
    */
 
    .volume_container{
-       
         grid-column: 4/7;
         grid-row: 7/8;
-        background-color: rgb(124, 124, 124);
+        background-color: rgb(50, 50, 50);
         border-radius: 1rem;
         height: 100%;
         width: 100%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        
         animation: out-of-frame 1000ms;
     }
         .volume_container img{
@@ -375,13 +324,6 @@
      
 }
 
-
-
-
-
-
-
-
 .center_button{
     display: flex;
     justify-content: center;
@@ -417,9 +359,48 @@
 
 
 
+/*
+------------------------------------------------------------ Music App
+*/
+
+.music_app{
+    grid-column: 2/13;
+    grid-row: 2/9;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(10,1fr);
+    gap: 10px;
+
+}
+
+
+/*
+-------------------------------------------------------- Lighting app 
+*/
+
+.lights_app{
+    grid-column: 2/13;
+    grid-row: 2/9;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(5,1fr);
+    gap: 1rem;
+    justify-items: center;
+    align-items: center;
+
+}
 
 
 
+
+
+/*
+--------------------- keyframe fade
+*/
 
 
 
