--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -50,6 +50,7 @@
     max-width: 100vw;  
     box-sizing: border-box; 
     padding: 1rem;
+  
 }
 
 .title_info{
@@ -65,14 +66,6 @@
     font-size: 3.75rem;
     font-weight: bold;
     color: rgb(50, 50, 50);
-  
-
-    
-
-        
-    
-   
-
     animation: room_selection 1000ms;
 }
 
@@ -81,86 +74,6 @@
 }
 
 
-
-
-
-
-
-
-
-/* Floor Selection Buttons */
-
-.side_bar_nav{
-    height: 100%;
-    width: 100%;
-    border-radius: 15px;
-    background-color: rgb(50, 50, 50);
-    grid-row: 1/9;
-    display: grid;
-    grid-template-rows: repeat(9, 1fr);
-    justify-items: center;
-    align-items: center;
-    animation: room_selection 1000ms;
-}
-    .nav{
-        grid-row: 2/9;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;   
-        gap: 1.75rem;
-    }
-        .nav .btn_square{
-            height: 5rem;
-            width: 85%;
-        }
-            .nav .btn_square p{
-                font-weight: bold;
-                color: black; 
-                font-size: 1rem;
-                
-            }
-                
-    
-.nav_clock{
-    grid-row: 9/10;   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    
-}
-    .nav_clock .clock{
-        font-size: 1rem;
-        padding: 0%;
-        left: 0px;
-      
-    }
-
-
-
-
-
- /* active selection of floor button*/
-    .btn_square#floor_selection_active{
-        background-color: rgb(56, 87, 133);
-        box-shadow: none;
-        border: solid 2px rgb(255, 255, 255);
-    }
-
-    #floor_selection_active p {
-        font-size: large;
-        font-weight: bold;
-        color: rgb(255, 255, 255); 
-    }
-
-    #floor_selection_active img {
-        filter: invert(1);
-        }
-
-   
 
 /* Room selection tiles*/
 
@@ -180,31 +93,31 @@
     gap: 1.25rem;
    
     border-radius: 10px;
-    animation: room_selection 1000ms;
+
    
 
 }
 
 
 .room_card{
+    animation: room_selection 1000ms;
     height: 15rem;
     width: 15rem;
 
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
+
     justify-items: center;
     align-items: center;
-    
-    background-color: rgba(50, 50, 50, 0.85);
+    background-color: rgb(70, 70, 70, .75);
     text-decoration: none;
-    
     backdrop-filter: blur(25px);
-
     border-radius: 25px;
     box-shadow: 
         -5px -5px 15px #5a5656, 
-        5px 5px 15px #ffffff;
+        5px 5px 15px #ffffff8f;
+ 
   }
     .test{
         grid-column: 1/4;
@@ -274,7 +187,10 @@
 
     }
 
-}           
+}     
+
+          
+
 
 
 
@@ -304,10 +220,13 @@
 
     100%{
         
-         opacity: 1;
+         opacity: 5;
     }
 
 }
+
+
+
 
 @media 
 only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait) {
