--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -33,8 +33,10 @@
     width: 100%;
     font-weight: 100;
     animation: room_selection 1000ms;
+    color: rgb(247, 247, 247);
+    text-shadow: 1px 1px 1px rgb(202, 201, 201);
 }
-
+    
 
 /*
 -------------------------------------------------------------------------------------- Selection a media source
@@ -73,26 +75,20 @@
     }
 
 .source_card{
-
-    height: 13rem;
+    height: 15rem;
     width: 13rem;
     border-radius: 10px;
-
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-
-    background-color: rgba(50, 50, 50, 0.85);
+    background-color: rgb(70, 70, 70, .75);
     text-decoration: none;
-    
     backdrop-filter: blur(25px);
-
     border-radius: 25px;
-
     box-shadow: 
-        -6px -1px 15px #0f0f0f7a, 
-        5px 5px 10px #ffffff7a;
+        -6px -2px 15px #0f0f0f7a, 
+        2px 2px 15px #abaaaaba;
     z-index: 1;
 
     position: relative;
@@ -147,7 +143,7 @@
      
        /* Styling */
        border-radius: 20px;
-       backdrop-filter: blur(25px);
+       backdrop-filter: blur(15px);
        z-index: 1;
        position: relative;
        animation: controller-load 900ms;
@@ -168,14 +164,13 @@
        bottom: 0;
        width: 100%;
        height: 100%;
-       background-color: rgb(255, 255, 255);
-       opacity: 0.3250;
+       background-color: rgb(70, 70, 70);
+       opacity: 0.65;
        z-index: 0;
        border-radius: 20px;
    }
 
-   .controller_layout_back_button{
-       background-color: rgb(41, 41, 41);
+   #controller_layout_back_button{
        border-bottom-right-radius:20px ;
        border-top-left-radius:20px ;
        border: none;
@@ -189,7 +184,25 @@
 
        z-index: 50;
        box-shadow: rgb(30, 30, 30) 0px 20px 30px -10px;
+
+       
+     
+    
+
+ 
+       background-color: #3f3c3c;
+       box-shadow: rgba(0, 0, 0, 0.377) 5px 10px 15px,
+         #ffffff 1.5px 1.5px 2px 0px inset, #c7c3c0 -1.5px -1.5px 2px 0px inset;
+       cursor: pointer;
+       transition: 0.1s ease-in-out;
+   
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       z-index: 1;
    }
+
+
 
 
    
@@ -202,7 +215,6 @@
    .volume_container{
         grid-column: 4/7;
         grid-row: 7/8;
-        background-color: rgb(50, 50, 50);
         border-radius: 1rem;
         height: 100%;
         width: 100%;
@@ -210,7 +222,22 @@
         justify-content: space-evenly;
         align-items: center;
         animation: out-of-frame 1000ms;
+        position: relative;
+        z-index: 1;
+        backdrop-filter: blur(25px);
     }
+        .volume_container::before{
+            content: " ";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(70, 70, 70);
+            opacity: 0.65;
+            z-index: 0;
+            border-radius: 20px;
+        }
         .volume_container img{
             filter: invert(0);
         }
