--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -76,7 +76,7 @@
 
 .source_card{
     height: 15rem;
-    width: 13rem;
+    width: 15rem;
     border-radius: 10px;
     display: flex;
     justify-content: space-evenly;
@@ -168,6 +168,10 @@
        opacity: 0.65;
        z-index: 0;
        border-radius: 20px;
+   }
+
+   .user_title_controller p{ 
+    color: white;
    }
 
    #controller_layout_back_button{
@@ -413,13 +417,142 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(9,1fr);
     grid-template-rows: repeat(5,1fr);
     gap: 1rem;
     justify-items: center;
     align-items: center;
 
 }
+
+
+.light_container{
+    grid-column: 2/9;
+    grid-row: 1/6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+  
+}
+/*
+------------------- tile 
+*/
+
+.light_tile{
+    height: 15rem;
+    width: 15rem;
+    background-color: rgba(70,70,70, .75);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+    gap: 2rem;
+    backdrop-filter: blur(25px);
+    box-shadow: 
+    -5px -5px 15px #5a5656, 
+    5px 5px 15px #ffffff8f;
+    animation: fade 1000ms;
+
+}
+    .light_tile .light_info{
+        width: 80%;
+        flex-direction: column-reverse;
+    }
+        .light_tile .light_info p{
+           font-size: x-large;
+        }
+        .sub_text{
+            font-size: medium;
+        }
+
+/*
+------------------- slider 
+*/
+
+    .light{
+        background-color: rgba(70,70,70,.5);
+        backdrop-filter: blur(25px);
+        width: 100%;
+        height: 5rem;
+        padding: .5rem ;
+        border-radius: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+
+    .light_info{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 20%;
+    }
+    .light_controls{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+    }
+        .light_value{
+            font-size: 2rem;
+        }
+        .light_name{
+            font-size: medium;
+        }
+
+        .light_info p{
+            padding: 0%;
+            margin: 0%;
+            text-align: center;
+
+        }
+
+
+.sliderWrapper{
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+    .sliderWrapper p{
+       
+    }
+       
+           
+                .lights_app input[type="range"] {
+                    -webkit-appearance: none;
+                    appearance: none;
+                    width: 70%;
+                    height: 1.5rem;
+                    border-radius: 10px;
+                 
+                
+                    
+                }
+                    .lights_app input[type="range"]::-webkit-slider-thumb {
+                        z-index: 10;
+                        border: solid 8px rgb(0, 0, 0);
+                        -webkit-appearance: none;
+                        border-radius: 10px;
+                        width: 20px; 
+                        height: 55px; 
+                        background: rgb(255, 255, 255);
+                        cursor: pointer;
+                    }
+
+          
+
+
 
 
 
