--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -70,7 +70,7 @@
     align-content: center;
     flex-wrap: wrap;
 
-    gap: 1rem;
+    gap: 10px;
 
     }
 
@@ -85,10 +85,10 @@
     background-color: rgb(70, 70, 70, .75);
     text-decoration: none;
     backdrop-filter: blur(25px);
-    border-radius: 25px;
+    border-radius: 5px;
     box-shadow: 
-        -6px -2px 15px #0f0f0f7a, 
-        2px 2px 15px #abaaaaba;
+    -3px -3px 5px #5a5656, 
+    3px 3px 10px #ffffff8f;
     z-index: 1;
 
     position: relative;
@@ -110,7 +110,7 @@
     width: 9em;
     
     aspect-ratio: 1;
-    border-radius: 20px;
+    border-radius: 5px;
     background-color: transparent;   
     margin-bottom: 0.4em;
    
@@ -419,7 +419,6 @@
     display: grid;
     grid-template-columns: repeat(9,1fr);
     grid-template-rows: repeat(5,1fr);
-    gap: 1rem;
     justify-items: center;
     align-items: center;
 
@@ -435,7 +434,7 @@
     align-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 10px;
     width: 100%;
     height: 100%;
   
@@ -452,7 +451,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 20px;
+    border-radius: 5px;
     gap: 2rem;
     backdrop-filter: blur(25px);
     box-shadow: 
