--- a/src/assets/css/controllers/bluRay.css
+++ b/src/assets/css/controllers/bluRay.css
@@ -82,6 +82,74 @@
 
 
 
+/*
+--------------------------------------------------------------------------------- mobile controller
+*/
+
+
+
+
+
+
+
+
+@media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+
+
+    #bluRay_controller .btn_circle{
+        height: 5rem;
+        width: 5rem;
+    }
+
+    #bluRay_controller .bluRay_nav .btn_circle{
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+    #bluRay_controller .bluRay_nav .btn_circle_active{
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+
+
+    #bluRay_controller {
+        height: 100%;
+        width: 100%;
+
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 20% 80%;
+       
+        position: relative;
+        
+    }
+
+    .bluRay_nav{
+        width: 80%;
+        height: 105%;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 10px;
+        border-bottom: solid 1px white;
+    }
+       
+
+    .currentViewing{
+        height: 100%;
+        width: 100%;
+     
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+
+
+
+
+}
 
 
 
@@ -154,96 +222,3 @@
 
 
 
-
-@media (orientation: portrait) {
-        
-    #bluRay_controller{
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        align-items: center;
-    }
-    
-    .bluRay_controller_movement{
-        grid-column: 3/5;
-        grid-row:1/3;
-    }
-
-    .bluRay_controller_controls{
-        grid-column: 1/3;
-        width: 100%;
-        height: 100%;
-    }
-  
-    .bluRay_controller_controls_2{
-        grid-column: 1/3;
-        grid-row: 2;
-        width: 100%;
-        height: 100%;
-    }
-
-}
-
-/**********************  Crestron Tablet *********************************/
-@media screen and (max-width: 1300px) and (max-height: 950px) and (orientation: landscape){
-
-
-    .bluRay_controller_controls .transport_button p {
-        font-size: .9rem;
-    }
-           
-    .bluRay_controller_controls_2 .transport_button p {
-        font-size: .9rem;
-    }
-
-
-}
-
-@media screen and (max-width: 950px) and (max-height: 1300px) and (orientation: portrait){
-
-    .bluRay_controller_controls, .bluRay_controller_controls_2{
-        width: 85%;
-    }
-   
-    .bluRay_controller_controls .transport_button p {
-        font-size: .9rem;
-    }
-           
-    .bluRay_controller_controls_2 .transport_button p {
-        font-size: .9rem;
-    }
-  
-
-    
-}
-
-/**********************  Ipad Screen specs *********************************/
-@media screen and (max-width: 1024px) and (max-height: 768px) and (orientation: landscape){
-
-.bluRay_controller_controls .transport_button p {
-    font-size: .9rem;
-}
-       
-.bluRay_controller_controls_2 .transport_button p {
-    font-size: .9rem;
-}
-    
-}
-
-@media screen and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait){
-
-    .bluRay_controller_controls, .bluRay_controller_controls_2{
-        width: 85%;
-    }
-   
-    .bluRay_controller_controls .transport_button p {
-        font-size: .9rem;
-    }
-           
-    .bluRay_controller_controls_2 .transport_button p {
-        font-size: .9rem;
-    }
-  
-    
-}
-    
-   
