--- a/src/assets/css/dashboard_css/Climate_Dashboard.css
+++ b/src/assets/css/dashboard_css/Climate_Dashboard.css
@@ -19,9 +19,9 @@
   
 }
 
-    .title_info{
+    .climate_page .title_info{
         grid-row: 1;
-        grid-column: 2/13;
+        grid-column: 2/12;
         margin: 0%;
 
         display: flex;
@@ -31,7 +31,7 @@
         width: 100%;
         font-size: 3.75rem;
         font-weight: bold;
-        color: rgb(50, 50, 50);
+        color: rgb(255, 255, 255);
         animation: room_selection 1000ms;
     }
         .climate_page .btn_selected{
@@ -41,19 +41,55 @@
 
     /*
     ----------------------------------------------------------------------------------- Area where climate is being displayed
+     display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(2,1fr);
     */  
     
     .climate_dashboard_container{
-        grid-column: 2/13;
+        grid-column: 1/13;
         grid-row: 2/9;
         width: 100%;
         height: 100%;
+
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
+       
+   
+        gap: 1rem;
+        backdrop-filter: blur(10px);
+
+        animation: controller-load 1500ms;
+      
+       
     }
-        .containment{
-            width: 70%;
-            height: 85%;
+        .container_thermo{    
+           height: 20rem;
+           width: 22rem;
+        
         }
+
+            .climate_label{
+                position: absolute;
+                z-index: 9;
+                padding-top: 10px;
+                padding-left: 10px;
+                font-size: 1.15rem;
+            }
+
+
     
+       
+    
+
+    /*
+        ------------------------------- short nav 
+    */
+
+    .climate_page .nav_container{
+        grid-row: 1/2;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
