--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -51,7 +51,6 @@ $dark-gray: rgb(70,70,70)
     grid-template-columns: repeat(3,1fr)
     grid-template-rows: repeat(2,1fr)
     gap: 8px
-    overflow: hidden
     position: relative
     z-index: 1
     
@@ -166,7 +165,8 @@ $dark-gray: rgb(70,70,70)
     .dashboard_container
         display: grid
         grid-template-columns: repeat(2,1fr)
-        grid-template-rows: repeat(2,1fr)
+        grid-template-rows: repeat(3,1fr)
+        width: 115%
     
     .room_container
         height: 100%
