--- a/src/assets/css/dashboard_css/Security_Dashboard.css
+++ b/src/assets/css/dashboard_css/Security_Dashboard.css
@@ -112,8 +112,9 @@
     grid-template-rows: repeat(4,1fr);   
 }
     .keypad .btn_circle{
-        height: 6.15rem;
-        width: 6.15rem;
+        border-radius: 10px;
+        height: 6rem;
+        width: 8.25rem;
         background-color: rgb(70, 70, 70);
     }
         .keypad .btn_circle:active{
