--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -25,7 +25,7 @@
 
 .title_info{
     grid-row: 1/2;
-    grid-column: 2 / 13; 
+   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -523,10 +523,7 @@
     align-items: center;
     width: 100%;
 }
-    .sliderWrapper p{
-       
-    }
-       
+  
            
                 .lights_app input[type="range"] {
                     -webkit-appearance: none;
@@ -558,12 +555,127 @@
 
 
 /*
---------------------- keyframe fade
+--------------------- Overlays for reboot menu and power off 
 */
 
 
 
 
+.power_menu_overlay{
+    grid-column: 1/13;
+    grid-row: 1/9;
+
+    height: 100%;
+    width: 100%;
+   
+    z-index: 200;
+    position: absolute;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+ 
+   
+}
+    .power_menu_overlay::before{
+        content: " ";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 105%;
+        height: 100%;
+    
+        z-index: 0;
+        backdrop-filter: blur(20px);
+   
+
+       
+    }
+        .hide_power_menu_overlay{
+        display: none;
+        }
+            .power_menu{
+                background-color: rgb(70,70,70);
+                position: relative;
+                z-index: 100;
+
+                height: 60%;
+                width: 70%;
+
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                flex-direction: column;
+
+                border-radius: 20px;
+
+                animation: power-menu-load 1000ms;
+            }
+               
+                .power_menu_text{
+                    width: 75%;
+                    font-size: 2.25rem;
+                    text-align: center;
+                }
+
+              .power_menu_button{
+                   width: 100%;
+                   height: 25%;
+
+                   display: flex;
+                   justify-content: space-evenly;
+                   align-items: center;
+                   
+                }
+                 .power_menu_button button{
+                        height: 60%;
+                        width: 30%;
+                        border-radius: 15px;
+                        border: none;
+                        z-index: 999;
+                        box-shadow: 2px 6px 10px black;
+                    }
+
+                     .yes_reboot {
+                        height: 60%;
+                        width: 30%;
+                        border-radius: 15px;
+                        border: none;
+                        z-index: 999;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        box-shadow: 2px 6px 10px black;
+                    }
+                        .power_menu_button button p{
+                          font-size: 1.5rem;
+                        }
+
+                        .power_menu_overlay .yes_reboot  p {
+                            height: 60%;
+                            width: 30%;
+                            border-radius: 15px;
+                            border: none;
+                            z-index: 999;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+
+                            .power_menu a{
+                                text-decoration: none;
+                            }
+                                .power_menu a .yes_reboot{
+                                    box-shadow: none;
+                                }
+
+                                    .yes_reboot:active{
+                                        box-shadow: inset 5px 5px 10px white;
+                                    }
+                                        .no_reboot:active{
+                                            box-shadow: inset 5px 5px 10px white;
+                                        }
 
 
 
@@ -580,11 +692,236 @@
 
 
 
+@media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+    .generic_room .title_info{
+        position: relative;
+        bottom: 10px;
+        font-size: 2rem;
+        grid-column: 3/11;
+    
+    
+    }
+    
+    .mobile_back_btn{
+        display: contents; 
+    }
+        .back_button{
+            position: relative;
+            bottom: 1.25rem;
+        }
+    
+    
+        /*
+        ---------------------------------------------------------------------------------------------------------- Nav
+        */   
+    .nav_container{
+        grid-column: 1/13;
+        grid-row: 8;
+    
+        display: flex;
+        height: 55%;
+
+        position: relative;
+        top: 20px;
+    }
+    
+    .nav_clock{
+        display: none;
+    }
+    
+    .nav{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    
+    
+    /*
+    ------------------------------------------------------------------------------------------------------------- Cards
+    */
+    .generic_media_container{
+        grid-column: 1/13;
+        grid-row: 2/8;
+    }
+    .room_sources_container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        position: relative;
+        top: 5px;
+    }
+        .source_card{
+            height:155px;
+            width: 170px;
+        }
+            .source_card .img_container {
+                height: 70%;
+            }
+    
+    
+
+
+
+
+    /*
+    ---------------------------------------------------------------------------------------------------------- light_container
+    */        
+    
+    .lights_app{
+        grid-column: 1/13;
+        grid-row: 2/8;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+        border-radius: 10px;
+    }
+
+        .light_container{
+            grid-row: 2/7;
+            grid-column: 1/13;
+         
+     
+        }
+
+        #breakfast_nook.light_container{
+            grid-template-rows: repeat(4,1fr);
+        }
+            .light_tile{
+            
+              height: 160px;
+              width: 176px;
+                gap: 0;
+            }
+                .light_tile .light_info{
+                    width:95%
+                }
+
+                .light_controls{
+                    width: 100%;
+                    justify-content: space-evenly;
+                }
+                    .light_controls .btn_circle{
+                        height: 3.5rem;
+                        width: 3.5rem;
+                    }
+               
+    /*
+    ----------------------------------------------------------------------------------------------------- Controller layout 
+    
+    */  
+
+    .generic_media_container{
+        grid-row: 2/8;
+    }
+        .controller_layout{
+            grid-row: 1/11;
+            width: 100%;
+            height: 105%;
+            position: relative;
+            bottom: 15px;
+
+        }
+
+
+
+
+        
+        
+/*
+-------------------------------------------------------------------------------------------------------- reboot, arrow back, home and power off 
+*/
+        #controller_layout_back_button{
+            grid-column: 1 / 4;
+            height: 70%;
+        }
+        
+        #reboot_button{
+            height: 70%;
+        }
+        #mobile_home_btn, #mobile_power_btn{
+            display: contents;
+            
+        }
+            .home_button{
+                position: relative;
+                bottom: 1.25rem;
+            }
+
+            .home_button{
+                grid-column: 11/13;
+            }
+            .back_button{
+                grid-column: 1/3;
+            }
+/*
+----------------------------------------------------------------------------------------------------------------- display_logo
+*/
+.generic_media_container .logo_display{
+    grid-row: 1 / 1;
+    height: 100%;
+}
+   
+
+/*
+----------------------------------------------------------------------------------------------------------------- volume container
+*/
+
+        .volume_container .nav_container{
+            display: none;
+        }
+        .volume_container{
+            background-color: transparent;
+            grid-column: 1/10;
+            height: 110%;
+            position: relative;
+            top: 6.25rem;
+
+        }
+
+        #mobile_display_none{
+            display: none;
+        }
+    }
 
 
 
 
 
+
+/*
+----------------------------------------------------------------------------------------------------------------- iphone 14
+*/
+
+@media only screen and (max-device-width: 390px) and (max-device-width: 763px) and (orientation: portrait){
+    .generic_room .title_info{
+     
+        font-size: 1.75rem;
+    }
+    /*
+    ----------------------------------------------------------------------- source card
+    */
+    .source_card{
+        height:8.7rem;
+        width: 10.75rem;
+    }
+
+     /*
+    ----------------------------------------------------------------------- light cards
+    */
+    .light_tile{
+        height:165px;
+        width: 170px;
+    }
+
+    #breakfast_nook .light_tile{
+       height:8.7rem;
+        width: 10.75rem;
+    }
+}
 
 
 
