--- a/src/assets/css/controllers/appleTv.css
+++ b/src/assets/css/controllers/appleTv.css
@@ -4,9 +4,7 @@
     display: none;
 }
 
-#apple_tv_controller_mobile{
-    display: none;
-}
+
 
 
 /***** Start of controller CSS *******/
@@ -14,14 +12,14 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(11,1fr);
-    grid-template-rows: 8%  1fr;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: 1fr;
   
 }
 
 .apple_tv_controller_movement{
-    grid-column: 6/12;
-    grid-row: 1/3;
+    grid-column: 2/3;
+    grid-row: 1;
     width: 100%;
     height: 100%;
     
@@ -42,8 +40,8 @@
 
 
 .apple_tv_controller_controls{
-    grid-column: 1/6;
-    grid-row: 1/3;
+    grid-column: 1/2;
+    grid-row: 1;
     width: 100%;
     height: 100%;
     
@@ -359,119 +357,42 @@
 
 
 
-@media screen and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait){
-
-    #apple_tv_controller_mobile{
-        display: block;
-    }
-    
-
-        .control-icon.right {
-            right: 15px;
-        }
-
-        .control-icon.left {
-            left: 15px;
-        }
-
-        .control-icon.top {
-            top: 25px;
-        }
-
-        .control-icon.bottom {
-            bottom: 25px;
-        }
-       
-        
-        .controller_layout_back_button{
-            grid-column: 1/4;
-            height: 50%;
-        }
-            .controller_layout_back_button img{
-                height: 100%;
-            }
-        #reboot_button{
-            grid-column: 12/15;
-            height: 50%;
-        }
-
-        .power_menu{
-            width: 90%;
-        }
-            .power_menu_text{
-                margin-inline: 10px;
-            }
-
-        .controller_grid{
-            margin: 0%;
-        }
-            #apple_tv_controller{
-                display: none;
-            }
-        
-            #apple_tv_controller_mobile{
-                width: 100%;
-                height: 100%;
-                display: grid;
-                grid-template-columns: repeat(6,1fr);
-                grid-template-rows: repeat(5,1fr);
-            }
-
-            #apple_tv_controller_mobile .transport_button{
-                height: 3.75rem;
-                width: 3.75rem;
-            }
-                #apple_tv_controller_mobile .transport_button{
-                    height: 3.75rem;
-                    width: 3.75rem;
-                }
-                #apple_tv_controller_mobile .container{
-                    grid-column: 1/7;
-                    grid-row: 1/4;
-                }
 
 
-                .slot_1a{
-                    grid-column: 2/4;
-                    grid-row:4;
-                }
+                            @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
 
-                .slot_3a{
-                    grid-column: 4/6;
-                    grid-row:4;
-                }
+
+ 
+
+
+                                #apple_tv_controller{
+                                    height: 90%;
+                                    width: 100%;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+
+                                }
+
                 
-                .slot_2b{
+                            
 
-                    grid-column: 3/5;
-                    grid-row:5;
-                }
-        
-                .slot_1c{
-                    grid-column: 1/3;
-                    grid-row:5;
-                }
+                                .apple_tv_controller_movement{
+                                    height: 100%;
+                                    width: 100%;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    flex-direction: column;
+                                    gap: 1rem;
+                                }
+                                .controller{
+                                    position: relative;
+                                    top: 0rem;
+                                }
 
-                .slot_3c{
-                    grid-column: 5/7;
-                    grid-row:5;
-                }
-
-                #vol_info{
-                    grid-column: 1/9;
-                }
-                .source_audio_slider{
-                    width: 100%;
-                }
-               
-
-
-
-
-
-
-
-                .media_off {
-                    display: none;
-                }
-    }
+                            
+                            
+                            
+                            
+                            }
