--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -77,7 +77,7 @@
 .source_card{
     height: 15rem;
     width: 15rem;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -85,7 +85,6 @@
     background-color: rgb(70, 70, 70, .75);
     text-decoration: none;
     backdrop-filter: blur(25px);
-    border-radius: 5px;
     box-shadow: 
     -3px -3px 5px #5a5656, 
     3px 3px 10px #ffffff8f;
@@ -695,22 +694,15 @@
 @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
     .generic_room .title_info{
         position: relative;
-        bottom: 10px;
+        bottom: 20px;
         font-size: 2rem;
         grid-column: 3/11;
+        text-align: center;
     
     
     }
     
-    .mobile_back_btn{
-        display: contents; 
-    }
-        .back_button{
-            position: relative;
-            bottom: 1.25rem;
-        }
-    
-    
+  
         /*
         ---------------------------------------------------------------------------------------------------------- Nav
         */   
@@ -827,9 +819,178 @@
         }
 
 
-
-
         
+    .mobile_controller_nav{
+        width: 80%;
+        height: 105%;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 10px;
+        border-bottom: solid 1px white;
+
+ }
+       
+
+    .currentViewing{
+        height: 100%;
+        width: 100%;
+     
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+
+    .mobile_controller_nav.btn_circle{
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+    .mobile_controller_nav .btn_circle_active{
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+    .mobile_controller_nav .btn_circle_active img{
+        filter: invert(0);
+    }
+
+
+    /*
+    ---------------------------------------------------------------------------------------------------------- Controller specific
+    */
+
+   
+
+        .controller{
+            width:100%;
+            height: 100%;
+        }
+
+       
+
+        .control-icon.top {
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .control-icon.left {
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+        }
+
+        .control-icon.right {
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
+        }
+            
+        .control-icon.bottom {
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+
+
+
+        .bottom_row_1_controller{
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            width: 100%;
+          
+        }
+    
+        .bottom_row_2_controller{
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            width: 100%;
+        
+        }
+    
+
+
+    /*
+    ------------------- Bulray
+    */
+    .bluRay_controller_movement .btn_circle{
+        height: 4.5rem;
+        width: 4.5rem;
+    }
+    
+        .bluRay_controller_controls_2 .btn_circle{
+            height: 4.5rem;
+            width: 4.75rem;
+        }
+
+   
+      
+
+    /*
+    ------------------- apple Tv 
+    */
+
+    
+    .apple_tv_controller_movement .btn_circle{
+        height: 4.5rem;
+        width: 4.5rem;
+    }
+    
+        #reboot_button{
+            grid-column: 12/15;    
+        }
+
+    /*
+    ------------------- DTV
+    */
+
+    .dtv_controller_movement .container .btn_circle{
+        height: 4.25rem;
+        width: 4.25rem;
+    }
+
+    .dtv_controller_controls .btn_circle{
+        height: 4.5rem;
+        width: 4.5rem;
+    }
+
+   
+
+    
+    /*
+    ------------------- Roku
+    */
+
+    .roku_controller_movement .btn_circle{
+        height: 4.25rem;
+        width: 4.25rem;
+    }
+
+    
+
+
+
+
+    
+
+    .bottom_row_1_controller .btn_circle{
+        height: 3rem;
+        width: 5rem;
+        border-radius: 30px;
+    }
+
+    .bottom_row_2_controller .btn_circle{
+        height: 3rem;
+        width: 5rem;
+        border-radius: 30px;
+    }
+
+  
         
 /*
 -------------------------------------------------------------------------------------------------------- reboot, arrow back, home and power off 
@@ -837,7 +998,20 @@
         #controller_layout_back_button{
             grid-column: 1 / 4;
             height: 70%;
+            
         }
+
+        .mobile_back_btn{
+            display: contents; 
+        }
+            .back_button{
+                position: relative;
+                bottom: 1.25rem;
+                width: 100%;
+                height: 35%;
+            }
+        
+        
         
         #reboot_button{
             height: 70%;
@@ -849,13 +1023,19 @@
             .home_button{
                 position: relative;
                 bottom: 1.25rem;
+                width: 100%;
+                height: 35%;
             }
 
             .home_button{
                 grid-column: 11/13;
+                width: 100%;
+                height: 35%;
             }
             .back_button{
                 grid-column: 1/3;
+                width: 100%;
+                height: 35%;
             }
 /*
 ----------------------------------------------------------------------------------------------------------------- display_logo
@@ -921,7 +1101,26 @@
        height:8.7rem;
         width: 10.75rem;
     }
+
+
+    /*
+    ----------------------------------------------------------------------------------------------------------------- volume container
+    */
+
+
+    .volume_container{
+   
+        top: 5.75rem;
+ 
+    }
+
+
 }
+
+
+
+
+
 
 
 
